# fiducials

aruco_detect/: CMakeLists.txt  nodelet_plugins.xml  package.xml
aruco_detect/cfg/: DetectorParams.cfg
aruco_detect/include/aruco_detect/: aruco.hpp  aruco_detect.hpp  aruco_detect_nodelet.hpp
aruco_detect/src/: aruco.cpp  aruco_detect.cpp  aruco_detect_node.cpp  aruco_detect_nodelet.cpp
